# WithPartial

./: CHANGES.md  README.md  pyproject.toml
test/: test_partial_proxy.py  test_pipe_context.py  test_pipetools.py
with_partial/: __init__.py  partial_context.py  partial_proxy.py  pipe_context.py
with_pipe/: __init__.py  partial_proxy.py  pipe_context.py
