[tool.poetry]
name = "withpipeinspect"
version = "0.1.0"
description = ""
authors = ["Michael Milton <ttmigueltt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pipetools = {version = "^1.0.1", optional = true}
addict = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
pipetools = ["pipetools"]